<resources>
    <string name="app_name">BatteryChargerAnim</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="like">Do you like our app?</string>
    <string name="overlay">Overlay permission required to display animation</string>
    <string name="string_apply">Apply</string>
    <string name="string_appreciate">Appreciate us with good ratings</string>
    <string name="string_closing_method">Closing method</string>
    <string name="string_dur">Play duration</string>
    <string name="string_ex">Exit</string>
    <string name="string_exit">Do you want to exit</string>
    <string name="string_finish">Finish</string>
    <string name="string_grant">Grant following\102 required permissions</string>
    <string name="string_grant_mi">Grant the following permissions\10 for Xiaomi device</string>
    <string name="string_home">Display popup window while running in background</string>
    <string name="string_ignore">Ignore battery optimizations</string>
    <string name="string_later">Later</string>
    <string name="string_lock">Show on lock screen</string>
    <string name="string_next">Next</string>
    <string name="string_permit">Permit drawing over other apps</string>
    <string name="string_play_sound">Play sound with animation</string>
    <string name="string_rate">Rate now</string>
    <string name="string_select">Select Animation</string>
    <string name="string_set">Set your favourite\10 Animation</string>
    <string name="string_set_now">Set now</string>
    <string name="string_settings">Settings</string>
    <string name="string_show">Show only on lock screen</string>
    <string name="string_show_anim">Show animation</string>
    <string name="string_show_per">Show battery percentage</string>
    <string name="string_shown">Charging animation will be shown when charger is connected</string>
    <string name="string_title">Cool Battery Charging Animation</string>
    <string name="string_tutorial">Tutorial</string>
</resources>