<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/color_toolbar">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_11sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imgBack"
            android:fontFamily="@font/regular"
            android:text="@string/string_settings"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:id="@+id/gift"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/gift" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/ad_native"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/layoutSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/regular"
                    android:text="@string/string_play_sound"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <ToggleButton
                    android:id="@+id/switchSound"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/cb_selector"
                    android:checked="true"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/regular"
                    android:text="@string/string_dur"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <Spinner
                    android:id="@+id/spinnerDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/color_bg"
                    android:paddingRight="15dp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:rotation="270"
                    android:src="@drawable/ic_back" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/regular"
                    android:text="@string/string_closing_method"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <Spinner
                    android:id="@+id/spinnerClosingMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/color_bg"
                    android:paddingRight="15dp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:rotation="270"
                    android:src="@drawable/ic_back" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/regular"
                    android:text="@string/string_show"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <ToggleButton
                    android:id="@+id/switchLock"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/cb_selector"
                    android:checked="false"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/regular"
                    android:text="@string/string_show_per"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <ToggleButton
                    android:id="@+id/switchPer"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/cb_selector"
                    android:checked="true"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/regular"
                    android:text="@string/string_show_anim"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <ToggleButton
                    android:id="@+id/switchShow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/cb_selector"
                    android:checked="true"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
