<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/color_bg"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:text="@string/string_grant"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:padding="@dimen/_30sdp"
            android:src="@drawable/tut1" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="20"
            app:cardBackgroundColor="@color/color_tut_card"
            app:cardCornerRadius="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:weightSum="2">

                <RelativeLayout
                    android:id="@+id/layoutDrawing"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/regular"
                        android:text="@string/string_permit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp" />

                    <ToggleButton
                        android:id="@+id/toggleDrawing"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/cb_selector"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layoutBattery"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/regular"
                        android:text="@string/string_ignore"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp" />

                    <ToggleButton
                        android:id="@+id/toggleBattery"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/cb_selector"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="17"
            android:gravity="center">

            <TextView
                android:id="@+id/txtNext"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rounded_bg"
                android:backgroundTint="@drawable/buton_selector"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/string_next"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
